# skarb

./: .gitignore  .travis.yml  .yardopts  Makefile.am  README  README.md  acinclude.m4  configure.ac  configure.in
scripts/: benchmark_all_switches.rb  check_all_switches.rb  connection_graph_visualiser.rb  console  twice.sh  verify_functional_tests.rb
src/: Makefile.am
src/compiler/: Makefile.am  classes_dict_builder.rb  compiler.rb  config.rb.in  emitter.rb  extensions.rb  hash_builder.rb  helpers.rb  manager.rb  optimizer.rb  parser.rb  rubyc.rb  rubyc.rb.in  sexp_parsing.rb  skarb.rb.in  stdlib.rb  translator.rb
src/compiler/emitter/: Makefile.am  assignments.rb  blocks.rb  composite.rb  errors.rb  flow_control.rb  functions.rb  helpers.rb  literals.rb  macros.rb  modifiers.rb  operators.rb
src/compiler/lib/: objects.h
src/compiler/optimizations/: Makefile.am  connection_graph_builder.rb  math_inliner.rb  memory_allocator.rb  translation_streamer.rb
src/compiler/optimizations/connection_graph_builder/: Makefile.am  connection_graph.rb  local_table.rb  objects_succession.rb  stdlib_graphs.rb  stdlib_graphs_loader.rb
src/compiler/optimizations/memory_allocator/: connection_graph.rb  local_table.rb  node.rb
src/compiler/translator/: Makefile.am  argv.rb  blocks.rb  class_variables.rb  classes.rb  classes_dict.rb  constants.rb  event_manager.rb  flow_control.rb  functions.rb  global_variables.rb  instance_variables.rb  local_variables.rb  mangling.rb  math_inliner.rb  stdlib_classes.rb  symbol_table.rb  translated_sexp_dictionary.rb  type_checks.rb
src/compiler/translator/functions/: Makefile.am  mangling.rb
src/stdlib/: Makefile.am  array.c  array.h  blocks.c  blocks.h  class.c  class.h  false.c  false.h  fixnum.c  fixnum.h  float.c  float.h  hash.c  hash.h  helpers.c  helpers.h  method_cache.c  method_cache.h  nil.c  nil.h  object.c  object.h  objects.h  stringclass.c  stringclass.h  true.c  true.h  types.h  xalloc.c  xalloc.h
test/: Makefile.am  coverage.rb
test/functional/: Makefile.am  array.rb  blocks.rb  case.rb  class_declaration.rb  constants-overriding.rb  double-evaluation.rb  dynamic-types.rb  empty-argv.rb  fixnum.rb  float.rb  global-vars.rb  hash.rb  if-else.rb  if-elsif.rb  if.rb  inheritance.rb  inheritance2.rb  local-vars.rb  methods-search.rb  names_mangling.rb  nil.rb  overloading-functions.rb  puts.rb  recur.rb  reocurring-parameters.rb  return.rb  runner.rb  simple-function-without-arguments.rb  simple-functions.rb  strings.rb  true-false.rb  unless-else.rb  unless.rb  until.rb  var-decls-in-funcs.rb  while-break.rb  while.rb  zero-as-a-condition.rb
test/functional/ui/: Makefile.am  cc  compile_from_stdin.sh  create_a_binary.sh  dont_link.sh  emit_c_only.sh  error_parse.sh  errorous_source.rb  fail_from_stdin.sh  help.sh  no_options.sh  output_binary_name.sh  set_cflags.sh  set_compiler.sh  store_temporary_file_after_failure.sh  test_code.rb  uitester.rb  unsupported.sh  use_cc_by_default.sh
test/performance/: Makefile.am  ackermann.rb  arithmetic_expressions.rb  arrays.rb  binary_trees.rb  heapsort.rb  matrix.rb  quicksort.rb  runner.rb  strings.rb
test/unit/: Makefile.am  array_spec.rb  connection_graph_builder_spec.rb  emitter_spec.rb  local_table_spec.rb  memory_allocator_spec.rb  stdlib_graphs_loader_spec.rb  translation_streamer_spec.rb  translator_spec.rb
