AC_PREREQ([2.67])
AC_INIT([inzynierka], [snapshot])
AM_INIT_AUTOMAKE([1.11 foreign])
AC_PROG_AWK
AC_CHECK_PROGS(RUBBER, [rubber])
if test -z "$RUBBER"; then
	AC_CHECK_PROGS(PDFLATEX, [pdflatex])
	if test -z "$PDFLATEX"; then
		AC_MSG_ERROR([cannot find neither rubber nor pdflatex])
	fi
	AC_SUBST(LATEXC, ["\$(top_srcdir)/scripts/twice.sh $PDFLATEX"])
else
	AC_SUBST(LATEXC, ["$RUBBER -d"])
fi
AC_CHECK_PROGS(PERL, [perl])
if test -z "$PERL"; then
	AC_MSG_ERROR([cannot find Perl])
fi
AC_CHECK_PROGS(RUBY, [ruby])
if test -z "$RUBY" -o true = `$RUBY -e "puts RUBY_VERSION < \"1.9.2\""`; then
	AC_MSG_ERROR([cannot find Ruby >= 1.9.2])
fi
AC_CONFIG_FILES([Makefile doc/Makefile])
AC_OUTPUT
