AC_PREREQ([2.65])
AC_INIT([inzynierka], [snapshot])
AM_INIT_AUTOMAKE([1.10 foreign color-tests])

# Tests related to C
AC_PROG_CC
AC_PROG_LIBTOOL
AC_TYPE_SIZE_T
AC_TYPE_UINT32_T
AC_FUNC_MALLOC
AC_FUNC_REALLOC

# Other tests
AC_PROG_AWK
AC_CHECK_PROGS(RUBBER, [rubber])
if test -z "$RUBBER"; then
	AC_CHECK_PROGS(PDFLATEX, [pdflatex])
	if test -z "$PDFLATEX"; then
		AC_MSG_NOTICE([cannot find neither rubber nor pdflatex])
	fi
	AC_SUBST(LATEXC, ["\$(top_srcdir)/scripts/twice.sh $PDFLATEX"])
else
	AC_SUBST(LATEXC, ["$RUBBER -d"])
fi
AM_CONDITIONAL([HAVE_LATEXC], [test x != "x$LATEXC"])
AC_CHECK_PROGS(PERL, [perl])
if test -z "$PERL"; then
	AC_MSG_ERROR([cannot find Perl])
fi
AC_CHECK_PROGS(RUBY, [ruby])
if test x = "x$RUBY" -o true != "`$RUBY -e 'puts RUBY_VERSION>="1.9.2"'`"; then
	AC_MSG_ERROR([cannot find Ruby >= 1.9.2])
fi
INZ_CHECK_GEMS([rspec sexp_processor ruby_parser simplecov])
AC_SUBST([rubycincludedir], ["$includedir/rubyc"])
AC_CONFIG_FILES([
				Makefile
				src/Makefile
				src/compiler/emitter/Makefile
				src/compiler/translator/Makefile
				src/compiler/Makefile
				src/stdlib/Makefile
				doc/Makefile
				test/Makefile
				test/functional/Makefile
				test/functional/ui/Makefile
				test/unit/Makefile
				])
AC_OUTPUT
