SUBDIRS = functions
translatordir=$(pkgdatadir)/translator
dist_translator_DATA = symbol_table.rb functions.rb flow_control.rb \
                       local_variables.rb instance_variables.rb \
                       classes.rb constants.rb \
                       stdlib_classes.rb class_variables.rb \
		       global_variables.rb argv.rb
